--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import "./header/header.css";
+
 *,
 ::before,
 ::after {
@@ -8,4 +10,5 @@
 html,
 body {
   font-size: 62.5%;
+  font-family: "DM Sans", Arial, Helvetica, sans-serif;
 }
