--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,7 @@
 @import "./header/header.css";
+@import "./main/main.css";
+
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 *,
 ::before,
