--- a/styles/style.css
+++ b/styles/style.css
@@ -15,3 +15,10 @@ body {
   font-size: 62.5%;
   font-family: "DM Sans", Arial, Helvetica, sans-serif;
 }
+
+.extended {
+  height: 100%;
+}
+.reduced {
+  height: 0%;
+}
