style : refacto input extend and reduce

--- a/styles/scss/main/_search.scss
+++ b/styles/scss/main/_search.scss
@@ -167,22 +167,22 @@ form {
 .filter__byTag--device,
 .filter__byTag--ingredient,
 .filter__byTag--ustensil {
-  &.reduced button {
+  button {
     display: block;
   }
-  &.extended button {
-    display: none;
+  span {
+    cursor: pointer;
+    pointer-events: none;
   }
-}
-
-.filter__byTag--device,
-.filter__byTag--ingredient,
-.filter__byTag--ustensil {
-  &.reduced .tags {
+  .tags {
     display: none;
   }
   &.extended {
+    button {
+      display: none;
+    }
     span {
+      pointer-events: initial;
       transform: translateY(-50%) rotate(180deg);
     }
     .tags {
