--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -265,6 +265,11 @@ form span img {
   font-size: 3.2rem;
   text-align: center;
 }
+@media screen and (max-width: 1180px) {
+  .recipes h2 {
+    font-size: 2.1rem;
+  }
+}
 
 article {
   width: 380px;
