--- a/styles/scss/main/_article.scss
+++ b/styles/scss/main/_article.scss
@@ -6,6 +6,9 @@
   h2 {
     font-size: 3.2rem;
     text-align: center;
+    @media screen and (max-width: 1180px) {
+      font-size: 2.1rem;
+    }
   }
 }
 
